Table overflow fix

--- a/server/ServerMVC/wwwroot/css/style.css
+++ b/server/ServerMVC/wwwroot/css/style.css
@@ -235,6 +235,7 @@ body {
 }
 
 .table-wrapper {
+    font-size: 11px;
     margin: 30px 0;
 }
 
